--- a/CaseTaskManager.UI/Pages/Cases/Delete.razor
+++ b/CaseTaskManager.UI/Pages/Cases/Delete.razor
@@ -22,6 +22,6 @@ else
         </div>
     </div>
 
-    <button class="btn btn-danger me-2" @onclick="Delete">Delete</button>
+    <button class="btn btn-danger me-2" @onclick="DeleteCase">Delete</button>
     <button class="btn btn-secondary" @onclick="Cancel">Cancel</button>
 }
